[package]
name = "tree-sitter-x"
description = "A tree-sitter grammar for the x programming language."
version = "0.0.1"
authors = ["Alexandre Frigon <alexandre@frigon.app>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "x"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/afrigon/tree-sitter-x"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.4"
